Update index.html to use velkommen image
Replaced placeholder image source with 'velkommen.png'.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <a-scene background="color: #ECECEC">
     <a-assets>
       <!-- Placeholder images; replace with your own images in the images folder -->
-      <img id="img1" src="images/img1.jpg">
-      <img id="img2" src="images/img2.jpg">
+          <img id="img1" src="velkommen.png">
       <!-- Add more images as needed -->
     </a-assets>
 
