Set dark background and update index.html for VR gallery

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 </head>
 <body>
   <!-- A-Frame scene for Meta Horizon VR gallery -->
-  <a-scene background="color: #ECECEC">
+  <a-scene background="color: #000000">
     <a-assets>
       <!-- Placeholder images; replace with your own images in the images folder -->
-          <img id="img1" src="velkommen.png">
+      <img id="img1" src="velkommen.png">
       <!-- Add more images as needed -->
     </a-assets>
 
     <!-- Create sky/environment -->
-    <a-sky color="#FFFFFF"></a-sky>
+    <a-sky color="#000000"></a-sky>
 
     <!-- Display images on planes positioned around the user -->
     <a-plane src="#img1" position="-2 1.5 -3" rotation="0 15 0" width="2" height="1.5"></a-plane>
