--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <title>Drømme‑univers • 360° galleri med rutsjebaner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Pin A‑Frame og plugins til stabile versioner kompatible med Meta Quest -->
-  <script defer src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+  <!--
+    Vi bruger jsDelivr til at hente A‑Frame og plugins. Dette CDN fungerer
+    stabilt på GitHub Pages og i Meta Horizon, hvor direkte kald til
+    aframe.io til tider bliver blokeret. Skripterne indlæses med defer så de
+    kører i rækkefølge efter DOM‑parsning.
+  -->
+  <script defer src="https://cdn.jsdelivr.net/npm/aframe@1.5.0/dist/aframe.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/aframe-blink-controls@0.4.3/dist/aframe-blink-controls.min.js"></script>
 
@@ -64,7 +69,7 @@
     <!-- Gallery ring of 12 images -->
     <a-entity gallery-ring="radius: 14; y: 1.6; width: 3.2; height: 2.2"></a-entity>
 
-    <!-- Camera rig with movement and snap-turn; fallback for missing extras -->
+    <!-- Camera rig with movement and snap-turn -->
     <a-entity id="rig" position="0 0 0" movement-controls="fly: false" snap-turn-keys>
       <a-entity id="camera" camera position="0 1.6 0"
                 look-controls="pointerLockEnabled: true"
@@ -93,10 +98,10 @@
   <!-- Debug log: logs errors at bottom-left. Safe to remove in production. -->
   <div id="log" style="position:fixed;left:.5rem;bottom:.5rem;color:#7cf;font:12px monospace;z-index:9999"></div>
 
-  <!-- All custom scripts are loaded at the end to ensure A‑Frame is ready -->
-  <script defer>
+  <!-- Scripts executed after DOM parsing; we wait for AFRAME to be defined before registering components -->
+  <script>
     // Hide the boot overlay when scene is ready or after timeout
-    window.addEventListener('DOMContentLoaded', () => {
+    document.addEventListener('DOMContentLoaded', () => {
       const boot = document.getElementById('boot');
       const scene = document.querySelector('a-scene');
       function hide() { if (boot) boot.style.display = 'none'; }
@@ -118,153 +123,153 @@
     window.addEventListener('unhandledrejection', e => log('REJ: ' + (e.reason && e.reason.message ? e.reason.message : e.reason)));
   </script>
 
-  <script defer>
-    // Quest-specific renderer tweaks and foveation
-    AFRAME.registerComponent('quest-tweaks', {
-      init: function() {
-        const r = this.el.renderer || this.el.sceneEl.renderer;
-        try { r.xr && r.xr.setFoveation && r.xr.setFoveation(1); } catch(e) {}
-        if (r) {
-          r.physicallyCorrectLights = false;
+  <script>
+    (function registerWhenReady() {
+      // Poll until AFRAME is defined before registering components
+      if (!window.AFRAME) {
+        setTimeout(registerWhenReady, 50);
+        return;
+      }
+      const AFRAME = window.AFRAME;
+      // Quest-specific renderer tweaks and foveation
+      AFRAME.registerComponent('quest-tweaks', {
+        init: function() {
+          const r = this.el.renderer || this.el.sceneEl.renderer;
+          try { r.xr && r.xr.setFoveation && r.xr.setFoveation(1); } catch(e) {}
+          if (r) { r.physicallyCorrectLights = false; }
         }
-      }
-    });
+      });
 
-    // Static stars for ambient background
-    AFRAME.registerComponent('star-spheres', {
-      schema: { count: {default: 200}, spread: {default: 140} },
-      init: function() {
-        const { count, spread } = this.data;
-        for (let i = 0; i < count; i++) {
-          const s = document.createElement('a-sphere');
-          const x = (Math.random() - 0.5) * spread;
-          const y = 8 + Math.random() * 40;
-          const z = (Math.random() - 0.5) * spread;
-          const r = Math.random() * 0.08 + 0.01;
-          s.setAttribute('position', `${x} ${y} ${z}`);
-          s.setAttribute('radius', r);
-          s.setAttribute('material', 'color:#fff; emissive:#fff; emissiveIntensity:0.28; shader:standard; fog:false');
-          this.el.appendChild(s);
+      // Static stars for ambient background
+      AFRAME.registerComponent('star-spheres', {
+        schema: { count: {default: 200}, spread: {default: 140} },
+        init: function() {
+          const { count, spread } = this.data;
+          for (let i = 0; i < count; i++) {
+            const s = document.createElement('a-sphere');
+            const x = (Math.random() - 0.5) * spread;
+            const y = 8 + Math.random() * 40;
+            const z = (Math.random() - 0.5) * spread;
+            const r = Math.random() * 0.08 + 0.01;
+            s.setAttribute('position', `${x} ${y} ${z}`);
+            s.setAttribute('radius', r);
+            s.setAttribute('material', 'color:#fff; emissive:#fff; emissiveIntensity:0.28; shader:standard; fog:false');
+            this.el.appendChild(s);
+          }
         }
-      }
-    });
+      });
 
-    // Snap-turn for desktop: rotate rig with Q/E or arrow keys
-    AFRAME.registerComponent('snap-turn-keys', {
-      schema: { angle: {default: 22.5} },
-      init: function() {
-        const rig = this.el;
-        const a = this.data.angle;
-        window.addEventListener('keydown', (e) => {
-          if (e.key === 'ArrowLeft' || e.key.toLowerCase() === 'q') rotate(-a);
-          if (e.key === 'ArrowRight' || e.key.toLowerCase() === 'e') rotate(a);
-        });
-        function rotate(dy) {
-          const r = rig.getAttribute('rotation');
-          rig.setAttribute('rotation', `${r.x} ${r.y + dy} ${r.z}`);
-        }
-      }
-    });
-
-    // Lightbox viewer: show/hide with scale and opacity animations
-    AFRAME.registerComponent('image-viewer', {
-      init: function() {
-        const el = this.el;
-        el.setAttribute('visible', 'false');
-        el.setAttribute('scale', '0.001 0.001 0.001');
-        el.addEventListener('show', () => {
-          el.setAttribute('visible', 'true');
-          el.setAttribute('animation__scaleIn', 'property: scale; to: 1 1 1; dur: 200; easing: easeOutQuad');
-          el.setAttribute('animation__fadeIn', 'property: material.opacity; to: 1; dur: 200');
-        });
-        el.addEventListener('click', () => {
-          el.setAttribute('animation__scaleOut', 'property: scale; to: 0.001 0.001 0.001; dur: 180; easing: easeInQuad');
-          el.setAttribute('animation__fadeOut', 'property: material.opacity; to: 0; dur: 180');
-          setTimeout(() => { el.setAttribute('visible', 'false'); }, 200);
-        });
-      }
-    });
-
-    // Gallery ring component: place images, handle clicks for slides
-    AFRAME.registerComponent('gallery-ring', {
-      schema: {
-        radius: {type: 'number', default: 14},
-        count:  {type: 'int',    default: 12},
-        y:      {type: 'number', default: 1.6},
-        width:  {type: 'number', default: 3.0},
-        height: {type: 'number', default: 2.0}
-      },
-      init: function() {
-        const d = this.data;
-        const root = this.el;
-        for (let i = 0; i < d.count; i++) {
-          const angle = (i / d.count) * Math.PI * 2;
-          const x = d.radius * Math.sin(angle);
-          const z = d.radius * Math.cos(angle);
-          const rotY = 180 - THREE.MathUtils.radToDeg(angle);
-          const n = i + 1;
-          const assetEl = document.querySelector('#img' + n);
-          const asset = assetEl ? '#img' + n : '#img1';
-          const p = document.createElement('a-plane');
-          p.setAttribute('width', d.width);
-          p.setAttribute('height', d.height);
-          p.setAttribute('position', `${x} ${d.y} ${z}`);
-          p.setAttribute('rotation', `0 ${rotY} 0`);
-          p.setAttribute('material', `src:${asset}; side:double; shader:standard; roughness:0.85`);
-          p.classList.add('clickable');
-          // hover & click animations
-          p.setAttribute('animation__hoverOn','property: components.material.material.emissiveIntensity; startEvents: mouseenter; to:0.35; dur:120');
-          p.setAttribute('animation__hoverOff','property: components.material.material.emissiveIntensity; startEvents: mouseleave; to:0; dur:140');
-          p.setAttribute('animation__click','property: scale; startEvents: click; to:1.08 1.08 1.08; dir:alternate; dur:140');
-          p.addEventListener('click', () => {
-            // If image 11 -> Halloween slide; if 12 -> Galaxy slide; else show viewer
-            if (n === 11) {
-              startHalloweenSlide();
-            } else if (n === 12) {
-              startGalaxySlide();
-            } else {
-              const viewer = document.querySelector('#viewer');
-              viewer.setAttribute('material', 'src', asset);
-              viewer.emit('show');
-            }
+      // Snap-turn for desktop: rotate rig with Q/E or arrow keys
+      AFRAME.registerComponent('snap-turn-keys', {
+        schema: { angle: {default: 22.5} },
+        init: function() {
+          const rig = this.el;
+          const a = this.data.angle;
+          window.addEventListener('keydown', (e) => {
+            if (e.key === 'ArrowLeft' || e.key.toLowerCase() === 'q') rotate(-a);
+            if (e.key === 'ArrowRight' || e.key.toLowerCase() === 'e') rotate(a);
           });
-          root.appendChild(p);
+          function rotate(dy) {
+            const r = rig.getAttribute('rotation');
+            rig.setAttribute('rotation', `${r.x} ${r.y + dy} ${r.z}`);
+          }
         }
-      }
-    });
+      });
 
-    // Ride animation helper: simple segmented path with tilt animation
-    function rideAlong(key) {
-      const rig = document.getElementById('rig');
-      const rot = (key === 'galaxy') ? '-15' : (key === 'halloween' ? '15' : '0');
-      // reset position and rotation
-      rig.setAttribute('position', '0 0 0');
-      rig.setAttribute('rotation', `0 ${rot} 0`);
-      // remove previous animations
-      ['s1','s2','s3','s4','tilt'].forEach(k => rig.removeAttribute('animation__' + k));
-      // four segments for a smooth ride
-      rig.setAttribute('animation__s1','property: position; to: 0 3 -6; dur: 2000; easing: easeInOutSine');
-      rig.setAttribute('animation__s2','property: position; to: 2 1 -14; dur: 2000; easing: easeInOutSine; startEvents: animationcomplete__s1');
-      rig.setAttribute('animation__s3','property: position; to: -2 0 -22; dur: 2000; easing: easeInOutSine; startEvents: animationcomplete__s2');
-      rig.setAttribute('animation__s4','property: position; to: 0 1.6 -28; dur: 2000; easing: easeOutSine; startEvents: animationcomplete__s3');
-      // tilt effect
-      rig.setAttribute('animation__tilt','property: rotation; dir: alternate; loop: true; to: 3 ' + rot + ' 0; dur: 800; easing: easeInOutSine');
-      setTimeout(() => rig.removeAttribute('animation__tilt'), 8200);
-      // hide viewer
-      const viewer = document.getElementById('viewer');
-      if (viewer) viewer.setAttribute('visible','false');
-    }
-    function startHalloweenSlide() { rideAlong('halloween'); }
-    function startGalaxySlide() { rideAlong('galaxy'); }
-    function startGeneralSlide() { rideAlong('general'); }
+      // Lightbox viewer: show/hide with scale and opacity animations
+      AFRAME.registerComponent('image-viewer', {
+        init: function() {
+          const el = this.el;
+          el.setAttribute('visible', 'false');
+          el.setAttribute('scale', '0.001 0.001 0.001');
+          el.addEventListener('show', () => {
+            el.setAttribute('visible', 'true');
+            el.setAttribute('animation__scaleIn','property: scale; to: 1 1 1; dur: 200; easing: easeOutQuad');
+            el.setAttribute('animation__fadeIn','property: material.opacity; to: 1; dur: 200');
+          });
+          el.addEventListener('click', () => {
+            el.setAttribute('animation__scaleOut','property: scale; to: 0.001 0.001 0.001; dur: 180; easing: easeInQuad');
+            el.setAttribute('animation__fadeOut','property: material.opacity; to: 0; dur: 180');
+            setTimeout(() => { el.setAttribute('visible','false'); }, 200);
+          });
+        }
+      });
 
-    // Fallback if movement-controls not present
-    window.addEventListener('DOMContentLoaded', () => {
-      const rig = document.getElementById('rig');
-      if (!AFRAME.components['movement-controls']) {
-        rig.setAttribute('wasd-controls', 'acceleration: 18');
+      // Gallery ring component: place images, handle clicks for slides
+      AFRAME.registerComponent('gallery-ring', {
+        schema: {
+          radius: {type: 'number', default: 14},
+          count:  {type: 'int',    default: 12},
+          y:      {type: 'number', default: 1.6},
+          width:  {type: 'number', default: 3.0},
+          height: {type: 'number', default: 2.0}
+        },
+        init: function() {
+          const d = this.data;
+          const root = this.el;
+          for (let i = 0; i < d.count; i++) {
+            const angle = (i / d.count) * Math.PI * 2;
+            const x = d.radius * Math.sin(angle);
+            const z = d.radius * Math.cos(angle);
+            const rotY = 180 - window.THREE.MathUtils.radToDeg(angle);
+            const n = i + 1;
+            const assetEl = document.querySelector('#img' + n);
+            const asset = assetEl ? '#img' + n : '#img1';
+            const p = document.createElement('a-plane');
+            p.setAttribute('width', d.width);
+            p.setAttribute('height', d.height);
+            p.setAttribute('position', `${x} ${d.y} ${z}`);
+            p.setAttribute('rotation', `0 ${rotY} 0`);
+            p.setAttribute('material', `src:${asset}; side:double; shader:standard; roughness:0.85`);
+            p.classList.add('clickable');
+            // hover & click animations
+            p.setAttribute('animation__hoverOn','property: components.material.material.emissiveIntensity; startEvents: mouseenter; to:0.35; dur:120');
+            p.setAttribute('animation__hoverOff','property: components.material.material.emissiveIntensity; startEvents: mouseleave; to:0; dur:140');
+            p.setAttribute('animation__click','property: scale; startEvents: click; to:1.08 1.08 1.08; dir:alternate; dur:140');
+            p.addEventListener('click', () => {
+              if (n === 11) {
+                startHalloweenSlide();
+              } else if (n === 12) {
+                startGalaxySlide();
+              } else {
+                const viewer = document.querySelector('#viewer');
+                viewer.setAttribute('material', 'src', asset);
+                viewer.emit('show');
+              }
+            });
+            root.appendChild(p);
+          }
+        }
+      });
+
+      // Ride animation helper: simple segmented path with tilt animation
+      function rideAlong(key) {
+        const rig = document.getElementById('rig');
+        const rot = (key === 'galaxy') ? '-15' : (key === 'halloween' ? '15' : '0');
+        rig.setAttribute('position', '0 0 0');
+        rig.setAttribute('rotation', `0 ${rot} 0`);
+        ['s1','s2','s3','s4','tilt'].forEach(k => rig.removeAttribute('animation__' + k));
+        rig.setAttribute('animation__s1','property: position; to: 0 3 -6; dur: 2000; easing: easeInOutSine');
+        rig.setAttribute('animation__s2','property: position; to: 2 1 -14; dur: 2000; easing: easeInOutSine; startEvents: animationcomplete__s1');
+        rig.setAttribute('animation__s3','property: position; to: -2 0 -22; dur: 2000; easing: easeInOutSine; startEvents: animationcomplete__s2');
+        rig.setAttribute('animation__s4','property: position; to: 0 1.6 -28; dur: 2000; easing: easeOutSine; startEvents: animationcomplete__s3');
+        rig.setAttribute('animation__tilt','property: rotation; dir: alternate; loop: true; to: 3 ' + rot + ' 0; dur: 800; easing: easeInOutSine');
+        setTimeout(() => rig.removeAttribute('animation__tilt'), 8200);
+        const viewer = document.getElementById('viewer');
+        if (viewer) viewer.setAttribute('visible','false');
       }
-    });
+      window.startHalloweenSlide = function() { rideAlong('halloween'); };
+      window.startGalaxySlide    = function() { rideAlong('galaxy'); };
+      window.startGeneralSlide   = function() { rideAlong('general'); };
+
+      // Fallback if movement-controls not present
+      document.addEventListener('DOMContentLoaded', () => {
+        const rig = document.getElementById('rig');
+        if (!AFRAME.components['movement-controls']) {
+          rig.setAttribute('wasd-controls', 'acceleration: 18');
+        }
+      });
+    })();
   </script>
 </body>
 </html>
