--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     aframe.io til tider bliver blokeret. Skripterne indlæses med defer så de
     kører i rækkefølge efter DOM‑parsning.
   -->
-  <script defer src="https://cdn.jsdelivr.net/npm/aframe@1.5.0/dist/aframe.min.js"></script>
+  <!-- Load A‑Frame from its official CDN. The jsDelivr path for aframe does not expose the compiled build. -->
+  <script defer src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/aframe-extras@7.4.0/dist/aframe-extras.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/aframe-blink-controls@0.4.3/dist/aframe-blink-controls.min.js"></script>
 
